# AutomationDownloadGoogleFlowImage

./: .gitignore  README.md  config.example.yaml  config.yaml  debug_flow.py  discover_selectors.py  generate.py  pyproject.toml
.sisyphus/: boulder.json
.sisyphus/notepads/google-flow-automation/: decisions.md  issues.md  learnings.md  problems.md
.sisyphus/plans/: google-flow-automation.md
src/: browser.py  config.py  downloader.py  flow.py  reporter.py  selectors.py  utils.py
tests/: test_batch.py  test_browser.py  test_config.py  test_downloader.py  test_reporter.py  test_resilience.py  test_utils.py
tests/fixtures/: sample_prompts.json  sample_prompts.txt  simple_prompts.json
