[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "google-flow-automation"
version = "0.1.0"
description = "Automate Google Flow image generation via browser automation"
requires-python = ">=3.10"
dependencies = [
    "playwright>=1.40.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[project.scripts]
generate = "generate:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "integration: marks tests as integration tests (requires browser)",
]
